RESOLVED FIXED55885
[chromium] Undefined default skia parameter in ShaderChromium.h
https://bugs.webkit.org/show_bug.cgi?id=55885
Summary [chromium] Undefined default skia parameter in ShaderChromium.h
Adrienne Walker
Reported 2011-03-07 10:52:19 PST
From an email from Grace: http://trac.webkit.org/changeset/79043 moved SK_B32_SHIFT test from ContentLayerChromium.cpp to ShaderChromium.h. But it didn't move "#include "SkcolorPriv.h"" where the default value is defined.
Attachments
Patch (1.10 KB, patch)
2011-03-07 11:16 PST, Adrienne Walker
no flags
Adrienne Walker
Comment 1 2011-03-07 11:16:55 PST
James Robinson
Comment 2 2011-03-07 11:18:34 PST
Comment on attachment 84960 [details] Patch R=me
WebKit Commit Bot
Comment 3 2011-03-07 14:34:27 PST
Comment on attachment 84960 [details] Patch Clearing flags on attachment: 84960 Committed r80499: <http://trac.webkit.org/changeset/80499>
WebKit Commit Bot
Comment 4 2011-03-07 14:34:32 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.