third_party/WebKit/Source/WebCore/platform/graphics/chromium/ShaderChromium.h
@@ -31,6 +31,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "PlatformString.h"
 
+#if USE(SKIA)
+#include "SkColorPriv.h"
+#endif
+
 namespace WebCore {
 
 class GraphicsContext3D;
